add more styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,8 @@
 h1 {
-  color: blue;
+  color: red;
   text-align: center;
+  line-height: 60px;
+  font-family: monospace;
 }
 
 h2 {
@@ -8,10 +10,21 @@ h2 {
   text-align: center
 }
 
+h3 {
+  color: green;
+  text-align: center;
+  font-style: oblique;
+  font-weight: lighter;
+}
+
 p {font-family: sans-serif;
+  font-size: 10px;
 }
 
 ul {
-  font-size: 20px;
+  font-size: 30px;
   line-height: 30px;
+  font-style: normal;
+  color: magenta;
+
 }
